Wrong context override crashes Blender #107805

Closed
opened 2023-05-10 11:03:10 +02:00 by MichailSoluyanov · 1 comment

System Information
Operating system: Linux-5.19.0-41-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 4080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.105.17

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b

Short description of error
I have a crash on executing simple Python script. Script contents wrong context override

Exact steps for others to reproduce the error
Here is the code that crashes Blender:

import bpy
from bpy import context

area = [area for area in bpy.context.screen.areas if area.type == "VIEW_3D"][0]

with context.temp_override(area=area):
    bpy.ops.view3d.render_border('INVOKE_DEFAULT', wait_for_input=True)

There is a mistake, region is not overridden, that's required by render border. But instead of showing an error, Blender crashes.

**System Information** Operating system: Linux-5.19.0-41-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 4080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.105.17 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` **Short description of error** I have a crash on executing simple Python script. Script contents wrong context override **Exact steps for others to reproduce the error** Here is the code that crashes Blender: ```Py import bpy from bpy import context area = [area for area in bpy.context.screen.areas if area.type == "VIEW_3D"][0] with context.temp_override(area=area): bpy.ops.view3d.render_border('INVOKE_DEFAULT', wait_for_input=True) ``` There is a mistake, region is not overridden, that's required by render border. But instead of showing an error, Blender crashes.
MichailSoluyanov added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-10 11:03:11 +02:00
Iliya Katushenock added
Module
Python API
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-10 14:02:16 +02:00
Contributor

Noticed that if run the code below, it crashes but only after operator finished, not immediately like with temp_override.

import bpy
from bpy import context
area = [area for area in bpy.context.screen.areas if area.type == "VIEW_3D"][0]
bpy.ops.view3d.render_border({'area': area}, 'INVOKE_DEFAULT', wait_for_input=True)
Noticed that if run the code below, it crashes but only after operator finished, not immediately like with `temp_override`. ``` import bpy from bpy import context area = [area for area in bpy.context.screen.areas if area.type == "VIEW_3D"][0] bpy.ops.view3d.render_border({'area': area}, 'INVOKE_DEFAULT', wait_for_input=True) ```
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-17 01:14:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107805
No description provided.