Fix #107805: Render border without an active region crashes